--- a/DOM_prac2.html
+++ b/DOM_prac2.html
@@ -14,12 +14,19 @@
             justify-content: center;
             flex-wrap: wrap;
             flex-direction: column;
+
+        }
+        body{
+            background-color: black;
+        }
+        h1{
+            color:white;
         }
     </style>
     <script>
         document.addEventListener('DOMContentLoaded',()=>{
 
-            let light = true
+            let light = false
 
             const body = document.querySelector('body')
             const h1 = document.querySelector('h1')
@@ -27,10 +34,10 @@
 
 
             btn.addEventListener('click', ()=>{
-                if(light === true){
-                    body.style.backgroundColor=`rgba(0,0,0)`;
-                    h1.style.color=`rgba(255,255,255)`
-
+                if(light === false){
+                    body.style.backgroundColor=`antiquewhite`;
+                    h1.style.color=`rgba(0,0,0)`
+                    btn.textContent = 'Dark Mode'
                 }
 
             })
@@ -41,7 +48,7 @@
 <body>
 <div id="content">
 <h1>Dark And Light</h1>
-<button id="btn">Dark Mode</button>
+<button id="btn">Light Mode</button>
 
 </div>
 
