feat: light mode 이벤트 설정

--- a/DOM_prac2.html
+++ b/DOM_prac2.html
@@ -38,6 +38,14 @@
                     body.style.backgroundColor=`antiquewhite`;
                     h1.style.color=`rgba(0,0,0)`
                     btn.textContent = 'Dark Mode'
+                    light = true
+                }
+                else{
+                    body.style.backgroundColor=`black`;
+                    h1.style.color=`rgba(255,255,255)`
+                    btn.textContent = 'Light Mode';
+                    light = false;
+
                 }
 
             })
